r300/compiler: Fix bug in rc_get_variables()

Variables that share readers were not always being linked together.

https://bugs.freedesktop.org/show_bug.cgi?id=36939